2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libmisc/shell/cmd_ls.c: Add include of <sys/stat.h> needed for UNIX
	BSP.

2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libgnat/Makefile.am: Handle POSIX being disabled correctly.

2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/Makefile.am: Only used by ITRON so do not build if ITRON is
	disabled.

2007-12-12	Chris Johns <chrisj@rtems.org>

	* Makefile.am: Added libmisc/shell/shellconfig.h to the installed
	header list.
	* libmisc/shell/shell_cmdset.c: Let the Initial command add occur
	in any order rather than before any commands have been added. Also
	made the command's strings be copies rather than references.
	* sapi/src/ioregisterdriver.c: Return the I/O initialise calls result.

2007-12-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, posix/Makefile.am, wrapup/Makefile.am:
	Move Ada support code that is untestable from the Standard RTEMS Test
	Suite into its own directory. All code in score, posix, rtems, and
	sapi should be testable by the Standard RTEMS Test Suites. It was
	buried under POSIX before so this should be a clearer location
	anyway.
	* libgnat/.cvsignore, libgnat/Makefile.am, libgnat/ada_intrsupp.c,
	libgnat/adasupp.c: New files.
	* posix/src/ada_intrsupp.c, posix/src/adasupp.c: Removed.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/pheapallocatealigned.c, score/src/pheapgetblocksize.c:
	Reverse file contents.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/include/rtems/config.h: Correct idle task prototype.

2007-12-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/Makefile.am, libmisc/shell/cmd_help.c, libmisc/shell/cmds.c,
	libmisc/shell/internal.h, libmisc/shell/shell.c,
	libmisc/shell/shell.h, libmisc/shell/shellconfig.h: Command set
	processing now separated from main command loop. Addition of user
	commands and aliases tested. Monitor registration now explicit.